[gd_scene load_steps=39 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Idle/Idle0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Fall/Fall0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Idle/Idle1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Idle/Idle2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Idle/Idle3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Idle/Idle4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Idle/Idle5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Idle/Idle6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Idle/Idle7.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Idle/Idle8.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Idle/Idle9.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/Idle/Idle10.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/Idle/Idle11.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/Jump/Jump0.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/Jump/Jump1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/Jump/Jump2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/Run/Run0.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/Run/Run1.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/Run/Run2.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Player/Run/Run3.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/Run/Run4.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Player/Run/Run5.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Player/Run/Run6.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Player/Run/Run7.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Player/Camera2D.gd" type="Script" id=26]
[ext_resource path="res://Scenes/Player/Button.gd" type="Script" id=27]
[ext_resource path="res://Scenes/Player/PlayerFSM.gd" type="Script" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 20 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=3]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1.86607, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 5.65686 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 2.21914, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 28 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 12, 14 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14, 1 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 34, 10 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 56.6696
height = 4.63249

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )

[node name="DeathArea" type="Area2D" parent="."]
position = Vector2( 0, 6 )
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
shape = SubResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body/Sprite"]
anims/Fall = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/Run = SubResource( 5 )

[node name="StandingShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 6 )
shape = SubResource( 6 )

[node name="CrouchingShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 20 )
shape = SubResource( 7 )
disabled = true

[node name="Raycasts" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, 35 )

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
position = Vector2( 12, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
position = Vector2( -12, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="DropThruRaycasts" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 0, 35 )

[node name="RayCast2D" type="RayCast2D" parent="DropThruRaycasts"]
position = Vector2( 12, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="DropThruRaycasts"]
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="DropThruRaycasts"]
position = Vector2( -12, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 34 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="SpearJump" type="Area2D" parent="."]
position = Vector2( 0, 34 )
collision_layer = 256
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpearJump"]
position = Vector2( 0, 3 )
shape = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, -32 )
offset = Vector2( 0, -100 )
current = true
limit_left = 0
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.05
drag_margin_top = 0.5
drag_margin_right = 0.05
editor_draw_drag_margin = true
script = ExtResource( 26 )

[node name="ShiftTween" type="Tween" parent="Camera2D"]

[node name="Button" type="Button" parent="."]
margin_left = 64.0
margin_top = -128.599
margin_right = 230.0
margin_bottom = -108.599
text = "exit"
script = ExtResource( 27 )

[node name="PlayerFSM" type="Node2D" parent="."]
script = ExtResource( 28 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WallRaycasts" type="Node2D" parent="."]

[node name="LeftWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="LeftWallRaycast" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -12, -16 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="LeftWallRaycast2" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -12, 16 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="RightWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="RightWallRaycast" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 12, -16 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="RightWallRaycast2" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 12, 16 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="WallSlideCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WallSlideSticky" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SlowMoArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowMoArea"]
position = Vector2( 0, 5 )
shape = SubResource( 10 )
[connection signal="grounded_updated" from="." to="Camera2D" method="_on_Player_grounded_updated"]
[connection signal="area_entered" from="DeathArea" to="." method="_on_DeathArea_area_entered"]
[connection signal="area_exited" from="DeathArea" to="." method="_on_DeathArea_area_exited"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="SpearJump" to="." method="_on_SpearJump_area_entered"]
[connection signal="area_exited" from="SpearJump" to="." method="_on_SpearJump_area_exited"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="timeout" from="WallSlideSticky" to="PlayerFSM" method="_on_WallSlideSticky_timeout"]
[connection signal="area_entered" from="SlowMoArea" to="." method="_on_SlowMoArea_area_entered"]
[connection signal="area_exited" from="SlowMoArea" to="." method="_on_SlowMoArea_area_exited"]
